--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-nice-dates",
-  "version": "3.1.0",
+  "name": "@axel-dev/react-nice-dates",
+  "version": "3.1.1",
   "main": "build/index.js",
   "module": "build/index.esm.js",
   "unpkg": "build/index.umd.js",
@@ -9,7 +9,7 @@
   "types": "index.d.ts",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hernansartorio/react-nice-dates.git"
+    "url": "git+https://github.com/axel-dev/react-nice-dates.git"
   },
   "bugs": {
     "url": "https://github.com/hernansartorio/react-nice-dates/issues"
